[gd_scene load_steps=3 format=3 uid="uid://by8f7mfnathye"]

[ext_resource type="Script" uid="uid://c48sol1km4y6r" path="res://resources/objects/enitity/Entity.gd" id="1_2isnj"]
[ext_resource type="PackedScene" uid="uid://dv1cesc1mjj7b" path="res://resources/overlap/sprite/SpriteBox.tscn" id="2_bc3h3"]

[node name="Entity" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_2isnj")

[node name="SpriteBox" parent="." instance=ExtResource("2_bc3h3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="hp_changed" from="." to="." method="_on_hp_changed"]

[editable path="SpriteBox"]
